Adaptive Design Get!

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
   <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
 <body>
   <div class="container clearfix">
@@ -15,10 +17,10 @@
     </div>
     <div class="grid_8 omega">
       <ul class="nav">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Things &amp; here</a></li>
-        <li><a href="#">Here I Am</a></li>
-        <li class="last"><a href="#">Contact Us</a></li>
+        <li class="about"><a href="#">About</a></li>
+        <li class="things"><a href="#">Things &amp; here</a></li>
+        <li class="here"><a href="#">Here I Am</a></li>
+        <li class="contact"><a href="#">Contact Us</a></li>
       </ul>
     </div>
     <div id="intro" class="grid_9">
